--- a/solution.html
+++ b/solution.html
@@ -8,7 +8,7 @@
 
 <style>
 *{
- font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+ font-family: Verdana, Geneva, Tahoma, sans-serif;
  }
 
  body {
@@ -48,8 +48,9 @@
     top: 30%;
     left: 50%;
     translate: -50% -50%;
-    width: auto;
-    height: auto;
+    filter: invert(1);
+    width: 40vw;
+    height: 40vh;
 }
 
 #logo-name {
@@ -65,7 +66,7 @@
 </style>
 
 <body>
-    <img src="https://raw.githubusercontent.com/AtanielSegundo/viscometer/master/static/viscometer.png" draggable="false" id="viscometer-logo" alt="viscometer_logo">
+    <img src="https://raw.githubusercontent.com/AtanielSegundo/viscometer/master/static/body-logo.svg" draggable="false" id="viscometer-logo" alt="viscometer_logo">
     <p id="logo-name">Viscometer</p>
 </body>
 </html>
