entry page made

--- a/solution.html
+++ b/solution.html
@@ -30,12 +30,13 @@ body::before {
     z-index: -1; 
 }
 
-#ifma-logo {
+#ifma_logo {
     position: fixed;
-    bottom: 5%;
-    left: 5%;
-    width: 200px;
-    height: 200px;
+    bottom: 5px;
+    left: 5px;
+    width: 80px;
+    height: 90px;
+    background-color: rgba(255,255,255,0.75);
 }
 
 @keyframes background_flow {
@@ -155,6 +156,6 @@ body::before {
         <p id="logo-name">ViscoSys</p>
         <button id="start_btn">Cronometrar</button>
     </div>
-    <img src="" alt="">
+    <img src="https://raw.githubusercontent.com/AtanielSegundo/viscometer/master/static/ifma_logo.png" draggable="false" id="ifma_logo">
 </body>
 </html>
